# autonomous_qa

./: .env.example  .gitignore  ENHANCEMENTS.md  README.md  pyproject.toml  requirements.txt  test_openai.py
.github/workflows/: playwright.yml
data/jira_exports/: sample_defects.txt
src/: api.py  main.py
src/agent/: base.py  graph.py  prioritization.py  prompts.py  tools.py
src/autonomous_qa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/browsers/: executor.py  manager.py  models.py
src/healing/: integration.py  models.py  service.py  strategies.py
src/rag/: analysis.py  ingestion.py  test_qdrant.py
src/reporting/: enhanced_metrics.py  metrics.py  models.py  service.py  templates.py
src/review/: api.py  models.py  service.py
src/security/: auth.py  encryption.py  models.py
tests/: test_agent.py  test_playwright.py
